# testreport

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  INSTALL_WINDOWS.md  README.md  pyproject.toml
docs/: release-workflow.md
installer/wix3/: Product.wxs  build_msi.cmd  build_msi.ps1
pyinstaller/: adeinsight.spec  run_gui.py
scripts/: bootstrap.ps1  bootstrap.sh  build_exe.ps1  build_exe.sh  build_windows.ps1  install_linux.sh
src/ade_insight/gui/: app.py
src/testreport/: __main__.py
src/testreport.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/testreport/cli/: __init__.py  app.py  bsen22041.py
src/testreport/core/: align_bsen22041.py  ambient_gradient.py  energy.py  plots.py  products.py  temp_plots.py  temp_stats.py
src/testreport/gui/: app.py  style.qss
src/testreport/io/: __init__.py  power_txt.py  temp_csv.py
src/testreport/standards/bsen22041/: pipeline.py  runner.py
tests/data/: Tec_CC4_L1_energy_ListMeas-20251003150730-002.txt
