[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "testreport"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["pandas>=2.0", "typer>=0.9"]

[project.scripts]
testreport = "testreport.cli.app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
